# anime_enhancement

./: .env  .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  README_GUI.md  config.py  config.sample.json  install.ps1  install.sh  main.py  pyproject.toml  requirements-gui.txt  requirements.txt  run_gui.bat  run_gui.sh  settings_gui_override.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: автотесты.md  баг-репорт.md  новая-фича.md
.github/workflows/: Checks.yml
gui/: __init__.py  app.py  config.py  logs_panel.py  main_window.py  nn_panel.py  process_controller.py  settings_panel.py  styles.qss
gui/utils/: __init__.py
packaging/linux/: README_LINUX.txt  install_desktop_entry.sh
packaging/linux/assets/: anime-enhancement.desktop
packaging/macos/assets/: ICNS_TODO.txt
packaging/pyinstaller/: AnimeEnhancement.linux.spec  AnimeEnhancement.macos.spec  AnimeEnhancement.windows.spec
packaging/scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  clean_build.ps1  clean_build.sh
packaging/windows/: installer.iss
profiles/: profile.json
scripts/: enhance_frames.sh  install_ffmpeg.py
src/audio/: audio_handling.py  audio_helpers.py
src/config/: comp_params.py  dependency_checker.py  pipeline_config.py  runtime_paths.py  settings.py
src/files/: batch_utils.py  file_actions.py
src/frames/: frames_helpers.py  improve.py  upscale.py
src/tests/: conftest.py  pytest.ini  test_integration_video_audio_pipeline.py  test_smoke_video_encoding.py  test_unit_settings_and_helpers.py  test_video_enhancement.py
src/utils/: batch_utils.py  cleanup.py  file_utils.py  logger.py
src/video/: video_exceptions.py  video_handling.py  video_helpers.py
src/video_processing/: audio.py  frames.py  upscale.py  video_assembly.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_cli_config.py  test_dependency_checker.py  test_frame_extraction.py  test_gui_config.py  test_gui_process_controller.py  test_gui_smoke.py  test_integration_video_audio_pipeline.py  test_pipeline_config.py  test_runtime_paths.py  test_smoke_video_encoding.py  test_unit_settings_and_helpers.py
