[tool.poetry]
name = "anime_enhancement"
version = "0.1.0"
description = "Real-ESRGAN is a neural network-based super-resolution algorithm that can be used to enhance the quality of anime videos."
authors = ["Alexander Petrushishin <Olexasha@MrDarwin1859@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
numpy = "^2.2.6"
imageio = "^2.37.0"
python-dotenv = "^1.1.1"
opencv-python = "^4.12.0.88"
tqdm = "^4.67.1"
colorama = "^0.4.6"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
autoflake = "^2.2.0"
pre-commit = "^2.7.1"
isort = "^5.5.4"
flake8 = "*"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
quiet = true

[tool.flake8]
extend-ignore = "E501"
exclude = [".venv/*"]

[tool.black]
line-length = 88
target-version = ['py38']
force-exclude = '''
/(
    \.eggs
  | \.git
  | .*\.json
  | .*\.pyc
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
