[tool.poetry]
name = "anime_enhancement"
version = "0.1.0"
description = "Улучшение аниме-видео через FFmpeg, RealESRGAN, waifu2x и RIFE."
authors = ["Alexander Petrushishin <Olexasha@MrDarwin1859@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.0,<3.14"
numpy = "^2.2.6"
imageio = "^2.37.0"
python-dotenv = "^1.1.1"
opencv-python = "^4.12.0.88"
psutil = "^7.0.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pyside6 = "^6.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.7.1"
pyinstaller = "^6.17.0"
ruff = "^0.14.9"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".git", ".venv", "venv", "build", "dist", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".git", ".venv", "venv", "env", ".idea"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

